--- a/src/layouts/LayoutDefault/LayoutDefault.scss
+++ b/src/layouts/LayoutDefault/LayoutDefault.scss
@@ -4,11 +4,10 @@
 }
 
 .sidebar {
-    width: 300px;
+    width: 98px;
     transition: width 0.3s ease;
 }
 
 .main-content {
-    flex-grow: 1; // Cột này sẽ chiếm phần còn lại của màn hình
-    overflow: auto;
+    width: 100%;
 }
