--- a/src/components/SettingBox/SettingBox.module.css
+++ b/src/components/SettingBox/SettingBox.module.css
@@ -17,7 +17,7 @@
     position: absolute;
     bottom: 60px;
     left: 10px;
-    background: #262626;
+    background: var(--bg-setting-box);
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
