--- a/src/layouts/LayoutDefault/LayoutDefault.scss
+++ b/src/layouts/LayoutDefault/LayoutDefault.scss
@@ -1,13 +1,13 @@
 .layout-app {
-    display: flex;
-    height: 100vh; // Chiều cao toàn màn hình
-}
+  display: flex;
+  height: 100vh;
 
-.sidebar {
+  .sidebar {
     width: 98px;
     transition: width 0.3s ease;
-}
+  }
 
-.main-content {
+  .main-content {
     width: 100%;
+  }
 }
