update: create post

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -155,6 +155,7 @@ button {
     width: 100%;
     height: 100%;
     background: #000;
+    border-radius: 15px;
 }
 
 .ant-modal .ant-modal-content {
