--- a/src/components/nav_item/styles.module.css
+++ b/src/components/nav_item/styles.module.css
@@ -21,7 +21,13 @@
 }
 
 .nav_title {
-    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    line-height: 1;
+    margin-top: 15px;
+    margin-left: 10px;
 }
 
 @media (min-width: 768px) and (max-width: 1263px) {
