--- a/src/views/dashboard/Thongke.scss
+++ b/src/views/dashboard/Thongke.scss
@@ -2,6 +2,12 @@
     padding: 20px;
     max-width: 1200px;
     margin: 0 auto;
+
+    .custom-pagination .ant-pagination-prev .ant-pagination-item-link,
+    .custom-pagination .ant-pagination-next .ant-pagination-item-link{
+      margin: 0px;
+      top: 10px;
+    }
   
     h1 {
       font-size: 28px;
