--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -147,8 +147,10 @@ button {
     color: black;
 }
 
-.ant-modal-body {
+.ant-modal-body .list{
     height: 100%;
+    padding-top: 15px;
+    margin-left: 40px;
 }
 
 .carousel-custom {
@@ -161,7 +163,6 @@ button {
 .ant-modal .ant-modal-content {
     padding: 0px;
     width: 100%;
-    height: 90vh !important;
     background: var(--bg-color);
 }
 
